bug with video sequence editor #41323

Closed
opened 2014-08-05 06:39:50 +02:00 by yellow foxz · 9 comments

System Information
win 7 intel graphic i5 processor

Blender Version
blender 2.71

Short description of error
there are 3 type of sequence views ...the third one will not work(bug)
after i clicked on second view

Exact steps for others to reproduce the error
there are 3 type of sequence views ...the third one will not work(bug)
after i clicked on second view.

1.PNG

2.PNG

3.PNG

**System Information** win 7 intel graphic i5 processor **Blender Version** blender 2.71 **Short description of error** there are 3 type of sequence views ...the third one will not work(bug) after i clicked on second view **Exact steps for others to reproduce the error** there are 3 type of sequence views ...the third one will not work(bug) after i clicked on second view. ![1.PNG](https://archive.blender.org/developer/F101499/1.PNG) ![2.PNG](https://archive.blender.org/developer/F101500/2.PNG) ![3.PNG](https://archive.blender.org/developer/F101501/3.PNG)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @yellowfoxz

Added subscriber: @yellowfoxz

Added subscriber: @jefrau

Added subscriber: @jefrau

Sorry for my bad English.

Is confirmed.

The "Video Sequence Editor" window if is divided into 2 parts but the "Sequencer" area is not expanded and only see the "Image preview" area.

Sorry for my bad English. Is confirmed. The "Video Sequence Editor" window if is divided into 2 parts but the "Sequencer" area is not expanded and only see the "Image preview" area.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-08-05 08:34:55 +02:00
Author

that is right......

that is right......

This issue was referenced by f37c3dd6a6

This issue was referenced by f37c3dd6a67208e739fab7826449d47372ad1a60

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f37c3dd6a6.

Closed by commit f37c3dd6a6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41323
No description provided.